fix: FAQ scrollbar hotfix

--- a/src/pages/FAQ/FAQ.module.scss
+++ b/src/pages/FAQ/FAQ.module.scss
@@ -1,12 +1,13 @@
 @import "src/styles/partials/theme";
 
 .wrapper {
-  display: flex;
-  flex-direction: row;
-  height: calc(100% - 80px);
   width: 100%;
+  min-height: calc(100% - 80px);
+  display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  overflow-y: auto;
   background-color: $background-dark-35;
   transition: background-color $transition-delay;
 }
@@ -17,6 +18,7 @@
 
 h1 {
   text-align: center;
+  margin-top: 20px;
   margin-bottom: 20px;
   font-size: 24px;
   color: $white;
